Implement OnActiveImeChanged.

When active IME is changed in Android side, the event is sent to
OnActiveImeChanged().
ArcInputMethodManagerService should switch an active IME in Chrome OS
side according to the event.

Bug: 900756
Test: Ran on DUT.
Change-Id: Ia8002ec678775f6349020b90766423987a4f714b
Reviewed-on: https://chromium-review.googlesource.com/c/1311853
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#604463}(cherry picked from commit 1682d1863b9c67d1a2bcf6b5d3a672d1135b7a2f [formerly 0c509ea6b33ff5f43ff476e223cffa337db0eb4f])
Reviewed-on: https://chromium-review.googlesource.com/c/1318381
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#504}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: d8674b27e0a064f9b619ffaa092cfaa6cacad096